--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>
       今日の動画
     </h2>
-    <video src="kitamisairu.webm"></video>
+    <video src="kitamisairu.webm"　controls　autoplay muted></video>
   </body>
   <style>
     h1{font-size:60px;color:blue;}
